<resources>
    <string name="app_name">ParkingWhere</string>
    <string name="action_settings">Add</string>
    <string name="parkingtechado">parkingTecho</string>
    <string name="parkingTec">Añadir parking techado</string>
    <string name="parkingCall">Añadir parking calle</string>
    <string name="listaParkings">Mi Lista de parkings</string>
    <string name="calleparkinglogo">Parcalle</string>
    <string name="listalogo">listalogo</string>
    <string name="titulo">where do I park the car?</string>

    <string name="where">where you leave me?</string>
    <string name="donde">dónde me dejaste?</string>
    <string name="floor">Floor:</string>
    <string name="piso">Piso:</string>
    <string name="puesto">Puesto:</string>
    <string name="spot">Spot:</string>
    <string name="btnSalvar">Guardar</string>
    <string name="btnSave">Save</string>
    <string name="colorP">Color:</string>

    <string name="title_section1">List</string>
    <string name="title_section2">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>


    <string name="title_activity_about">About</string>
    <string name="title_activity_maps">Map</string>
    <string name="puestoIn"></string>

</resources>
