<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.b_pachango.jm.parkingwhere.Main2Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/buttonBlue"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSalvar"
                android:id="@+id/button"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/donde"
                android:id="@+id/textView4"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/piso"
                android:id="@+id/textView2"
                android:layout_marginTop="50dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number|numberSigned"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_weight="1"
                android:layout_marginTop="70dp"
                android:numeric="signed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/puesto"
                android:id="@+id/textView3"
                android:layout_marginTop="120dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/puestoIn"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginTop="20dp" />


        </android.support.v7.widget.CardView>




    </LinearLayout>
</RelativeLayout>
